[workspace]
resolver = "2"
members = [
    "tmp",
    "algorithm",
    "leetcode",
    "workbench/std-demo",
    "workbench/cargo-demo",
    "workbench/closure-demo",
    "workbench/echo-demo",
    "workbench/ffi-demo",
    "workbench/generic-demo",
    "workbench/list",
    "workbench/macro-demo",
    "workbench/mod-demo",
    "workbench/tokio-demo",
    "workbench/minigrep",
    "workbench/phantom-demo",
    "workbench/trait-demo",
]
