[package]
name = "scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tmplib"
path = "src/lib.rs"

[[bin]]
name = "tmp001"
path = "src/tmp001.rs"

[[bin]]
name = "tmp002"
path = "src/tmp002.rs"

[dependencies]
# Warning! std only.
